@@ -1,3 +1,15 @@
+2012-06-04  Patrick Gansterer  <paroga@webkit.org>
+
+        Port RAMSize to WinCE
+        https://bugs.webkit.org/show_bug.cgi?id=87854
+
+        Reviewed by Geoffrey Garen.
+
+        WinCE has no GlobalMemoryStatusEx() function. Use GlobalMemoryStatus() instead.
+
+        * wtf/RAMSize.cpp:
+        (WTF::computeRAMSize):
+
 2012-06-01  Xianzhu Wang  <wangxianzhu@chromium.org>
 
         Remove dependency from ImageDiff to WTF
